Correção do tamanho do atributo nome da tabela periodo

--- a/.gitignore
+++ b/.gitignore
@@ -89,6 +89,10 @@ nbdist/
 *.tmPreferences.cache
 *.stTheme.cache
 
+### PhpStorm ###
+.idea/
+
+
 # workspace files are user-specific
 *.sublime-workspace
 
